fix user bindings
